# dot-vision

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.MD  Dockerfile  README.md  TFLite_DirectionLive.py  TFLite_DirectionTracker.py  docker-compose.yml  docker_requirements.txt  dot_vision.py  dot_vision_stream.py  eval.py  eval_result.json  extract_coordinate.py  init.sh  my_video-1.mkv  my_video-3.mkv  my_video-4.mkv  my_video-5.mkv  new_dot_vision.py  pyproject.toml  requirements.txt  run_video.py  start.sh  wandering-circle.html
app/: config.py  main.py
app/api/: websocket_routes.py
app/coordinates/: example_coordinates.json
app/models/: request_model.py
app/services/: base_service.py  homographic_service.py
app/tests/: test_frame_request_model.py  test_homographic_service.py  test_homographic_websocket.py
auxiliary/: auto_mapper.py  cv2_handler.py  debug_web_cv2.py  dot_vision_arguments.py  frame_dataclass.py  homographic_handler.py  homographic_transformation.py  image_handler.py  model_interpreter.py  new_auto_mapper.py  read_frames.py  task_template.py  tracker.py  tracking_handler.py  utils.py
coordinates/: 2d_coordinates.pkl  3d_coordinates.pkl
eval/: eval.py  ground_truths.txt  metric_scores.json  readme.md
ground_truths/: dummy_ground_truth.pkl  frame_location.txt
helpers/: extract_videoframe.py
object_tracking_examples/: TFLite_DirectionTracker.py
samples/: nick_room-6.mkv
scripts/: install_ngrok.sh  iptables_script.sh  ufw_script.sh
tests/: eval.py  metric_scores.json  predictions.json  result.json
web_display/: api_provider.py  backend.py  display.py  flask_app.py  server.py
(+10 files in other folders)
