[tool.poetry]
name = "dot-vision"
version = "0.1.0"
description = "Real time object tracker from Video Camera to 2D plane"
authors = ["kaorikizuna <34364395+Agung-Krisna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tflite-runtime = "^2.14.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
scipy = "^1.12.0"
flask = "^3.0.3"
scikit-learn = "^1.4.2"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
pyqt5-sip = "^12.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
