[tool.poetry]
name = "dot-vision"
version = "0.1.0"
description = ""
authors = ["kaorikizuna <34364395+Agung-Krisna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
opencv-python = "^4.10.0.84"
ultralytics = "^8.2.100"
celery = "^5.4.0"
pytest = "^8.3.3"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
